# ArbitrageBot

./: CONTRIBUTING.md  Cargo.toml  README.md  RISK_REGISTER.md  RUNBOOK.md  TASKS.md  streams.json  streams_bingx.json  streams_bitget.json  streams_bitmart_contract.json  streams_bitmart_spot.json  streams_coinex_perpetual.json  streams_futures.json  streams_gateio.json  streams_gateio_spot.json  streams_kucoin_futures.json  streams_kucoin_spot.json  streams_latoken.json  streams_options.json  streams_spot.json  streams_xt.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.trunk/: trunk.yaml
agents/: Cargo.toml
agents/benches/: orderbook_update.rs
agents/src/: lib.rs  registry.rs
agents/src/adapter/: binance.rs  bingx.rs  bitget.rs  bitmart.rs  coinbase.rs  coinex.rs  gateio.rs  kraken.rs  kucoin.rs  latoken.rs  lbank.rs  mexc.rs  mod.rs  okx.rs  xt.rs
agents/tests/: basic.rs  binance.rs  bitget.rs  channel_registry.rs  gateio.rs  latoken.rs  lbank.rs  lifecycle.rs  network.rs  readme.rs
benches/: event_alloc.rs  json_parse.rs
canonical/: Cargo.toml
canonical/src/: lib.rs  symbol.rs
canonical/tests/: convert.rs  symbol.rs
config/: default.toml
config/metrics/: dashboard.json
core/: Cargo.toml
core/benches/: rate_limit.rs
core/src/: config.rs  events.rs  lib.rs  metrics.rs  rate_limit.rs  tls.rs
core/tests/: arithmetic_ops.rs  backoff.rs  bit_ops.rs  channel.rs  chunking.rs  comparison_ops.rs  config.rs  event_channel_mapping.rs  event_roundtrip.rs  events.rs  exchange_configs.rs  missing_credentials.rs  order_book.rs  order_book_prop.rs  rate_limit.rs  shift_ops.rs  tls.rs  unknown_event_warning.rs  util.rs
ingestor/: Cargo.toml
ingestor/benches/: event_alloc.rs  ingestor.rs  json_parse.rs
ingestor/src/: lib.rs  main.rs
ingestor/src/adapter/: binance.rs  mod.rs
ingestor/src/ops/: health.rs  metrics.rs  mod.rs  shutdown.rs
ingestor/src/sink/: file.rs  kafka.rs  mod.rs  nats.rs  traits.rs  wal.rs
ingestor/tests/: adapter.rs  mock_agent.rs  partial_init.rs
src/: canonical.rs  config.rs  events.rs  lib.rs  main.rs  rate_limit.rs
src/adapter/: binance.rs
streams/: binance_options.json  bingx.json  bitget.json  coinex_perpetual.json  lbank.json  symbols.json
tests/: adapter.rs  backoff.rs  channel.rs  chunking.rs  config.rs  events.rs  exchange_configs.rs  missing_credentials.rs  order_book.rs  partial_init.rs  unknown_event_warning.rs
