[package]
name = "binance_us_and_global"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio-socks       = "0.5"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures           = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
anyhow            = "1"
url               = "2"
