[package]
name = "binance_us_and_global"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio-socks       = "0.5"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures           = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
once_cell         = "1"
anyhow            = "1"
url               = "2"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
metrics           = "0.24"
flate2            = "1"

[features]
default = []
# Enable verbose per-event logging at the debug level.
debug-logs = []

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
