[package]
name = "binance_us_and_global"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio             = { version = "1", features = ["full"] }
reqwest           = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio-socks       = "0.5"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures           = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
once_cell         = "1"
anyhow            = "1"
url               = "2"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
metrics           = "0.24"
async-trait       = "0.1"
toml              = "0.8"
rand              = "0.8"
rustls            = "0.21"
rustls-pemfile    = "1"
rustls-native-certs = "0.6"
sha2              = "0.10"
hex               = "0.4"
rust_decimal      = "1"

[features]
default = []
# Enable verbose per-event logging at the debug level.
debug-logs = []

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
serial_test = "2"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "event_alloc"
harness = false
