[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
arb_core = { path = "../core" }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures = "0.3"
simd-json = { version = "0.15", features = ["serde_impl"], default-features = false }
rand = "0.8"
url = "2"
tracing = "0.1"
metrics = "0.24"
rustls = "0.21"
serde_json = "1"

[features]
default = []
debug-logs = []
