[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
arb_core = { path = "../core" }
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures = "0.3"
simd-json = { version = "0.15", features = ["serde_impl"], default-features = false }
rand = "0.8"
url = "2"
tracing = "0.1"
metrics = "0.24"
rustls = "0.21"
serde_json = "1"
dashmap = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }

[features]
default = []
debug-logs = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }
metrics-util = "0.20"
httpmock = "0.6"
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[[bench]]
name = "orderbook_update"
harness = false
