[package]
name = "arb_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
simd-json = { version = "0.15", features = ["serde_impl"], default-features = false }
once_cell = "1"
anyhow = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", optional = true }
metrics-exporter-dogstatsd = { version = "0.9", optional = true }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1"
rustls-native-certs = "0.6"
sha2 = "0.10"
hex = "0.4"
rust_decimal = "1"
tracing = "0.1"

[features]
default = []
debug-logs = []
prometheus-exporter = ["metrics-exporter-prometheus"]
datadog-exporter = ["metrics-exporter-dogstatsd"]

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
serial_test = "2"
criterion = { version = "0.5", default-features = false, features = ["async_tokio"] }
toml = "0.8"
serde_json = "1"
canonical = { path = "../canonical" }

[[bench]]
name = "rate_limit"
harness = false
